@@ -87,8 +87,8 @@ static GtkActionEntry entries[] =
     N_("Dese_lect All"), "<shift><control>A", NULL, G_CALLBACK(action_cb) },
   { "edit-preferences", GTK_STOCK_PREFERENCES,
     NULL, NULL, NULL, G_CALLBACK(action_cb) },
-  { "show-torrent-properties", GTK_STOCK_PROPERTIES,
-    NULL, "<alt>Return", NULL, G_CALLBACK(action_cb) },
+  { "show-torrent-details", GTK_STOCK_INFO,
+    N_("_Details"), "<alt>Return", NULL, G_CALLBACK(action_cb) },
   { "show-about-dialog", GTK_STOCK_ABOUT,
     N_("_About Transmission"), NULL, NULL, G_CALLBACK(action_cb) },
   { "update-tracker", GTK_STOCK_NETWORK,
